# logger

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/: logger.hpp  logger_undef.hpp
src/: logger.cpp
